8240679: ZGC GarbageCollectorMXBean reports inaccurate post GC heap size for ZHeap pool

Reviewed-by: eosterlund